   report load times when processes cause massive log spew. (LP: #1516947)
 * Add key filtering to ProblemReport.load().
 * Don't read the entire report when determining the CrashCounter. This avoids
   long delays for existing large reports.
 * test_python_crashes.py: Be less sensitive to the precise names of
   gvfs-metadata D-Bus service files.

2.19.2 (2015-10-27)
-------------------
 * SECURITY FIX: When determining the path of a Python module for a program
   like "python -m module_name", avoid actually importing and running the
   module; this could lead to local root privilege escalation. Thanks to
   Gabriel Campana for discovering this and the fix!
   (CVE-2015-1341, LP: #1507480)
 * apt/dpkg: Don't mark packages downloaded from Launchpad for installation by
   apt. Thanks Brian Murray.
 * Fix backend_apt_dpkg.test_install_packages_system for recent "Fall back to
   direct Launchpad ddeb download" fix. coreutils-dbgsym should now always be
   available independent of whether the local system has ddeb apt sources.
 * test_backend_apt_dpkg.py: Reset internal apt caches between tests. Avoids
   random test failures due to leaking paths from previous test cases.

2.19.1 (2015-10-07)
-------------------
 * Consistently intercept "report file already exists" errors in all writers of
   report files (package_hook, kernel_crashdump, and similar) to avoid
   unhandled exceptions on those. (LP: #1500450)
 * apt/dpkg: Fall back to direct Launchpad ddeb download if we can't find it in
   the apt cache. Thanks Brian Murray! (LP: #1500557)
 * doc/data-format.tex: Clarify that key names are being treated as case
   sensitive (unlike RFC822).

2.19 (2015-09-24)
-----------------
 * apport: Drop re-nicing. This might decrease the time a user has to wait for
   apport to finish the core dump for a crashed/hanging foreground process.
   (See LP #1278780)
 * kernel_crashdump: Enforce that the log/dmesg files are not a symlink. This