@@ -14,6 +14,7 @@ detailed list of changes, please see ChangeLog.
    long delays for existing large reports.
  * test_python_crashes.py: Be less sensitive to the precise names of
    gvfs-metadata D-Bus service files.
+ * Move backend_apt_dpkg -dbgsym test cases to Ubuntu 15.10.
 
 2.19.2 (2015-10-27)
 -------------------
